# C-Demo

./: CMakeLists.txt
code/: main.c
code/ifdef/: ifdefTest.h
code/macro/: defineTest.c
code/memory/: MemoryTest.c  alloc.c  alloc.h  memoryTest.c  strdupTest.c
code/pointer/: funPointerTest.c  pointerTest.c  stringPointer.c  stringPointerTest.c
